<resources>
    <string name="app_name">Polissue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Polissue</string>
    <string name="nav_header_subtitle">Déclarez et résolvez des incidents</string>
    <string name="nav_header_desc">Naviguez grâce à ce menu</string>
    <string name="action_settings">Settings</string>
    <string name="account">Compte</string>
    <string name="issues">Issues</string>

    <!-- Issues -->
    <string name="issue_list">Liste des incidents</string>
    <string name="declare_issue">Déclarer un incident</string>
    <string name="issue_list_maps">Carte des incidents</string>
    <!-- /Issues -->

    <!-- Users -->
    <string name="search_bar_hint">Rechercher (Nom/E-mail)</string>
    <string name="notify_button">Notifier</string>
    <!-- /Users -->

    <!-- Notifications -->
    <string name="channel_name">polissue_notify_user_channel</string>
    <string name="channel_description">polissue_notify_user_description</string>
    <string name="CHANNEL_ID">polissue_notify_user_channel</string>
    <string name="notification_message">Vous avez été notifié sur cet incident</string>
    <!-- /Notifications -->

    <!--String related to login-->
    <string name="log_in">Connexion</string>
    <string name="sign_in">Inscription</string>
    <string name="user_id">Identifiants</string>
    <string name="log_out">Deconnexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_password_confirmation">Mot de passe (Confirmation)</string>
    <string name="error_invalid_email">Email doit avoir la forme example@example.com</string>
    <string name="error_invalid_password">Doit faire au moins 8 characteres </string>
    <string name="error_incorrect_password">Doit faire 6 charactere minimum et inclure une majuscule, minuscule et un charactère special</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="email_login">Email</string>
    <string name="google_login">Google</string>
    <string name="facebook_login">Facebook</string>
    <string name="first_name">Prenom</string>
    <string name="surname">Nom</string>
    <string name="profile">Profile</string>
    <string name="birthdate">Date de naissance</string>
    <string name="dialog_title">Connexion requise</string>
    <string name="dialog_message">Vous devez être connecté pour pouvoir déclarer un incident</string>
    <string name="dialog_positive_button">Se connecter</string>
    <string name="dialog_negative_button">Retour</string>

    <!--End of Login related string -->

    <!--Login API datas-->
    <string name="facebook_application_id" translatable="false">375637302923531</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb375637302923531</string>
    <string name="web_client_id">200004753595-drj23thgl1idstqtv24u6dumer8ftv1o.apps.googleusercontent.com</string>
    <string name="authFail">Echec de connexion</string>
    <string name="error_auth_google_play_service_update">Mise a jours des services google play necessaire</string>
    <string name="error_profile_settings">Erreur lors de la creation de profile, voir la rubrique Mon Compte</string>
    <string name="error_password_confirmation_must_match">Doit être identique au mot de passe</string>
    <string name="error_loading_picture">Erreur lors du chargement de l\'image</string>
    <string name="error_internal_file">Erreur avec vos fichiers</string>
    <string name="error_uploading_picture">Erreur d\'envoie de l\'image</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- INCIDENT LOCATION ACTIVITY -->
    <string name="incident_location">Position de l\'incident</string>
    <string name="or">ou</string>
    <string name="issues_position">Carte des incidents</string>
    <string name="location_text_field">Description de l\'incident</string>

    <string name="reset_password">Reinitialiser mot de passe</string>
    <string name="email_change">Changer Email</string>
    <string name="email_sent">Email envoyé</string>
    <string name="reset_password_dialog_text">Un email de reinitialisation vous sera envoyé</string>
    <string name="error_not_logged_in">Connexion nécéssaire</string>
    <string name="send">Envoyer</string>
    <string name="new_email">Nouvel Email</string>
    <string name="change_username">Changer de pseudo</string>
    <string name="new_username">Nouveau pseudo</string>
    <string name="change">changer</string>

    <!-- Time -->
    <string name="seconds">s</string>
    <string name="minutes">min</string>
    <string name="hours">h</string>
    <string name="days">j</string>
    <string name="weeks">sem</string>
    <string name="months">mois</string>
    <string name="years">an</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="profile_pic">Photo de profil</string>
    <!-- /Time -->

    <!-- Emergency -->
    <string name="high_emergency">Très urgent</string>
    <string name="medium_emergency">Urgent</string>
    <string name="low_emergency">Pas urgent</string>
    <!-- /Emergency -->

    <!-- State -->
    <string name="issue_not_resolved">Non résolu</string>
    <string name="issue_resolved">Résolu</string>
    <!-- /State -->

    <!-- Picture -->
    <string name="add_a_picture">Ajoutez une photo :</string>
    <!-- /Picture -->





</resources>
