<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_log_in"
                android:title="@string/log_in" />
            <item
                android:id="@+id/nav_sign_in"
                android:title="@string/sign_in" />
            <item
                android:id="@+id/nav_account"
                android:title="@string/account"
                android:visible="false"/>
            <item
                android:id="@+id/nav_log_out"
                android:title="@string/log_out"
                android:visible="false"/>
        </menu>
    </item>

</menu>
